--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
 <body>
 
     <div class="container">
-        Hello, World!
+        <div class="row">
+            Hello, World!
+        </div>
     </div>
 
 </body>
