Add .col Class CSS

--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
     <div class="container">
         <div class="row">
-            Hello, World!
+            <div class="col-sm-12 col-md-4">First</div>
+            <div class="col-sm-12 col-md-4">Second</div>
+            <div class="col-sm-12 col-md-4">Third</div>
         </div>
     </div>
 
