Add .table Class CSS

--- a/index.html
+++ b/index.html
@@ -15,9 +15,38 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-sm-6 col-md-4">First</div>
-            <div class="col-sm-6 col-md-4">Second</div>
-            <div class="col-sm-12 col-md-4">Third</div>
+            <div class="col-md-6 mt-5">
+                <table class="table table-bordered table-striped">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Name</th>
+                            <th>Surname</th>
+                            <th>Age</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <th scope="row">1</th>
+                            <td>Tuna</td>
+                            <td>Akman</td>
+                            <td>18</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">2</th>
+                            <td>John</td>
+                            <td>Doe</td>
+                            <td>19</td>
+                        </tr>
+                        <tr>
+                            <th scope="row">3</th>
+                            <td>Mark</td>
+                            <td>Jessica</td>
+                            <td>23</td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
         </div>
     </div>
 
