Add Form Inputs .form-control and .form-box Class CSS

--- a/index.html
+++ b/index.html
@@ -13,39 +13,96 @@
 </head>
 <body>
 
-    <div class="container">
+    <div class="container mt-5">
         <div class="row">
-            <div class="col-md-6 mt-5">
-                <table class="table table-bordered table-striped">
-                    <thead>
-                        <tr>
-                            <th>ID</th>
-                            <th>Name</th>
-                            <th>Surname</th>
-                            <th>Age</th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        <tr>
-                            <th scope="row">1</th>
-                            <td>Tuna</td>
-                            <td>Akman</td>
-                            <td>18</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">2</th>
-                            <td>John</td>
-                            <td>Doe</td>
-                            <td>19</td>
-                        </tr>
-                        <tr>
-                            <th scope="row">3</th>
-                            <td>Mark</td>
-                            <td>Jessica</td>
-                            <td>23</td>
-                        </tr>
-                    </tbody>
-                </table>
+            <div class="col-md-4 mb-3">
+                <div class="form-box">
+                    <label for="firstName" class="form-label">First Name</label>
+                    <input type="text" class="form-control form-valid" id="firstName"/>
+                </div>
+                <div class="form-status-feedback valid">
+                    Validated!
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="form-box">
+                    <label for="lastName" class="form-label">Last Name</label>
+                    <input type="text" class="form-control form-invalid" id="lastName"/>
+                </div>
+                <div class="form-status-feedback invalid">
+                    Not validate!
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="form-box">
+                    <label for="email" class="form-label">E-Mail</label>
+                    <input type="email" class="form-control" id="email" placeholder="example@domain.com"/>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="form-box">
+                    <label for="price" class="form-label">Price</label>
+                    <div class="form-group-box">
+                        <input type="number" class="form-control text-end" id="price" placeholder="0.00"/>
+                        <div class="form-append-box">₺</div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="form-box">
+                    <label class="form-label">Country/City/District</label>
+                    <div class="form-group-box">
+                        <select class="form-control">
+                            <option value="Türkiye">Türkiye</option>
+                        </select>
+                        <select class="form-control">
+                            <option value="Antalya">Antalya</option>
+                        </select>
+                        <select class="form-control">
+                            <option value="Muratpaşa">Muratpaşa</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="form-box">
+                    <label for="avatar" class="form-label">Avatar</label>
+                    <input type="file" class="form-control" id="avatar"/>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="form-box check-form">
+                    <label for="private" class="form-label">Account Private</label>
+                    <input type="checkbox" class="form-control" id="private"/>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-box check-form">
+                            <label for="publicAccount" class="form-label">Public Account</label>
+                            <input type="radio" class="form-control" id="publicAccount" name="private"/>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-box check-form">
+                            <label for="privateAccount" class="form-label">Private Account</label>
+                            <input type="radio" class="form-control" id="privateAccount" name="private"/>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="form-box">
+                    <label for="volume" class="form-label">Volume</label>
+                    <input type="range" class="form-control" id="volume"/>
+                </div>
+            </div>
+            <div class="col-md-4 mb-3">
+                <div class="form-box">
+                    <label for="content" class="form-label">Content</label>
+                    <textarea id="content" cols="30" rows="10" class="form-control"></textarea>
+                </div>
             </div>
         </div>
     </div>
