Add .btn and .btn-group and .btn-group-vertical and .btn-outline-[colors] Class CSS

--- a/index.html
+++ b/index.html
@@ -14,14 +14,58 @@
 <body>
 
     <div class="container mt-5">
+        <div class="row mb-5">
+            <div class="col-md-2 mb-3">
+                <button class="btn btn-primary">Click Me!</button>
+            </div>
+            <div class="col-md-2 mb-3">
+                <button class="btn btn-secondary">Click Me!</button>
+            </div>
+            <div class="col-md-2 mb-3">
+                <button class="btn btn-success">Click Me!</button>
+            </div>
+            <div class="col-md-2 mb-3">
+                <button class="btn btn-danger">Click Me!</button>
+            </div>
+            <div class="col-md-2 mb-3">
+                <button class="btn btn-warning">Click Me!</button>
+            </div>
+            <div class="col-md-2 mb-3">
+                <button class="btn btn-info">Click Me!</button>
+            </div>
+            <div class="col-md-2 mb-3">
+                <button class="btn btn-dark">Click Me!</button>
+            </div>
+        </div>
+        <div class="row mb-5">
+            <div class="col-md-2 mb-3">
+                <button class="btn btn-outline-primary">Click Me!</button>
+            </div>
+            <div class="col-md-2 mb-3">
+                <button class="btn btn-outline-secondary">Click Me!</button>
+            </div>
+            <div class="col-md-2 mb-3">
+                <button class="btn btn-outline-success">Click Me!</button>
+            </div>
+            <div class="col-md-2 mb-3">
+                <button class="btn btn-outline-danger">Click Me!</button>
+            </div>
+            <div class="col-md-2 mb-3">
+                <button class="btn btn-outline-warning">Click Me!</button>
+            </div>
+            <div class="col-md-2 mb-3">
+                <button class="btn btn-outline-info">Click Me!</button>
+            </div>
+            <div class="col-md-2 mb-3">
+                <button class="btn btn-outline-dark">Click Me!</button>
+            </div>
+        </div>
         <div class="row">
-            <div class="col-md-3">
-                <div class="card">
-                    <img src="https://i.picsum.photos/id/492/200/200.jpg?hmac=XU2aUuiOp-6a1CXwWFsbEobU3xA-9upNSkJiJacygTM" class="card-img-top"/>
-                    <div class="card-body">
-                        <label class="card-title">Card Title</label>
-                        <p class="card-text">Hello, Word!</p>
-                    </div>
+            <div class="col-md-12 mb-3">
+                <div class="btn-group-vertical">
+                    <button class="btn btn-primary">Click Me!</button>
+                    <button class="btn btn-secondary">Click Me!</button>
+                    <button class="btn btn-success">Click Me!</button>
                 </div>
             </div>
         </div>
