--- a/index.html
+++ b/index.html
@@ -15,61 +15,47 @@
 
     <div class="container mt-5">
         <div class="row mb-5">
-            <div class="col-md-2 mb-3">
-                <button class="btn btn-primary">Click Me!</button>
-            </div>
-            <div class="col-md-2 mb-3">
-                <button class="btn btn-secondary">Click Me!</button>
-            </div>
-            <div class="col-md-2 mb-3">
-                <button class="btn btn-success">Click Me!</button>
-            </div>
-            <div class="col-md-2 mb-3">
-                <button class="btn btn-danger">Click Me!</button>
-            </div>
-            <div class="col-md-2 mb-3">
-                <button class="btn btn-warning">Click Me!</button>
-            </div>
-            <div class="col-md-2 mb-3">
-                <button class="btn btn-info">Click Me!</button>
-            </div>
-            <div class="col-md-2 mb-3">
-                <button class="btn btn-dark">Click Me!</button>
-            </div>
-        </div>
-        <div class="row mb-5">
-            <div class="col-md-2 mb-3">
-                <button class="btn btn-outline-primary">Click Me!</button>
-            </div>
-            <div class="col-md-2 mb-3">
-                <button class="btn btn-outline-secondary">Click Me!</button>
-            </div>
-            <div class="col-md-2 mb-3">
-                <button class="btn btn-outline-success">Click Me!</button>
-            </div>
-            <div class="col-md-2 mb-3">
-                <button class="btn btn-outline-danger">Click Me!</button>
-            </div>
-            <div class="col-md-2 mb-3">
-                <button class="btn btn-outline-warning">Click Me!</button>
-            </div>
-            <div class="col-md-2 mb-3">
-                <button class="btn btn-outline-info">Click Me!</button>
-            </div>
-            <div class="col-md-2 mb-3">
-                <button class="btn btn-outline-dark">Click Me!</button>
-            </div>
-        </div>
-        <div class="row">
             <div class="col-md-12 mb-3">
-                <div class="btn-group-vertical">
-                    <button class="btn btn-primary">Click Me!</button>
-                    <button class="btn btn-secondary">Click Me!</button>
-                    <button class="btn btn-success">Click Me!</button>
+                <div class="alert alert-primary">
+                    A simple primary alert—check it out!
+                </div>
+            </div>
+            <div class="col-md-12 mb-3">
+                <div class="alert alert-secondary">
+                    A simple secondar alert—check it out!
+                </div>
+            </div>
+            <div class="col-md-12 mb-3">
+                <div class="alert alert-success">
+                    <h4 class="alert-title">Well done!</h4>
+                    A simple success alert—check it out!
+                </div>
+            </div>
+            <div class="col-md-12 mb-3">
+                <div class="alert alert-danger">
+                    A simple danger alert—check it out!
+                </div>
+            </div>
+            <div class="col-md-12 mb-3">
+                <div class="alert alert-warning" data-alert-key="firstAlert">
+                    A simple warning alert—check it out!
+                    <button class="btn-alert-close" data-event-type="alert" data-alert-key="firstAlert"></button>
+                </div>
+            </div>
+            <div class="col-md-12 mb-3">
+                <div class="alert alert-info">
+                    A simple info alert—check it out!
+                </div>
+            </div>
+            <div class="col-md-12 mb-3">
+                <div class="alert alert-dark">
+                    A simple dark alert—check it out!
                 </div>
             </div>
         </div>
     </div>
+
+    <script src="framework.js" type="text/javascript"></script>
 
 </body>
 </html>
