--- a/index.html
+++ b/index.html
@@ -16,40 +16,20 @@
     <div class="container mt-5">
         <div class="row mb-5">
             <div class="col-md-12 mb-3">
-                <div class="alert alert-primary">
-                    A simple primary alert—check it out!
-                </div>
-            </div>
-            <div class="col-md-12 mb-3">
-                <div class="alert alert-secondary">
-                    A simple secondar alert—check it out!
-                </div>
-            </div>
-            <div class="col-md-12 mb-3">
-                <div class="alert alert-success">
-                    <h4 class="alert-title">Well done!</h4>
-                    A simple success alert—check it out!
-                </div>
-            </div>
-            <div class="col-md-12 mb-3">
-                <div class="alert alert-danger">
-                    A simple danger alert—check it out!
-                </div>
-            </div>
-            <div class="col-md-12 mb-3">
-                <div class="alert alert-warning" data-alert-key="firstAlert">
-                    A simple warning alert—check it out!
-                    <button class="btn-alert-close" data-event-type="alert" data-alert-key="firstAlert"></button>
-                </div>
-            </div>
-            <div class="col-md-12 mb-3">
-                <div class="alert alert-info">
-                    A simple info alert—check it out!
-                </div>
-            </div>
-            <div class="col-md-12 mb-3">
-                <div class="alert alert-dark">
-                    A simple dark alert—check it out!
+                <button class="btn btn-primary" data-event-type="modal" data-modal-type="open" data-modal-key="firstModal">Open Modal</button>
+                <div class="modal" data-event-type="modal" data-modal-type="close" data-modal-key="firstModal">
+                    <div class="modal-box modal-md">
+                        <div class="modal-header">
+                            <label class="modal-title">Modal Title</label>
+                            <button class="modal-close-button" data-event-type="modal" data-modal-type="close" data-modal-key="firstModal"></button>
+                        </div>
+                        <div class="modal-content">
+                            Hello, World!
+                        </div>
+                        <div class="modal-footer">
+                            <button class="btn btn-secondary ml-auto" data-event-type="modal" data-modal-type="close" data-modal-key="firstModal">Close</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
