--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
 <body>
 
     <div class="container mt-5">
-        <div class="row mb-5">
+        <div class="row">
             <div class="col-md-12 mb-3">
-                Hello, World!
+                <h1 class="text-dark text-shadow-md">Document</h1>
+            </div>
+            <div class="col-md-12">
+                <h1 class="text-primary text-shadow-lg">Coming soon!</h1>
             </div>
         </div>
     </div>
